[gd_scene load_steps=6 format=3 uid="uid://bjq1a3fx722x3"]

[ext_resource type="Script" path="res://scenes/player/player_ship.gd" id="1_cdv7o"]
[ext_resource type="PackedScene" uid="uid://cot1q6540hllf" path="res://scenes/Weapons/Zone/shield_weapon.tscn" id="2_g0n3x"]
[ext_resource type="Texture2D" uid="uid://b7r8jydrvj3tx" path="res://assets/player/tiny_ship14.png" id="3_xwkpq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_11888"]
size = Vector2(52, 91)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7yk41"]
size = Vector2(70, 100)

[node name="PlayerShip" type="CharacterBody2D"]
collision_mask = 53
script = ExtResource("1_cdv7o")

[node name="ShieldWeapon" parent="." instance=ExtResource("2_g0n3x")]
modulate = Color(0.231373, 1, 1, 0.662745)
scale = Vector2(2, 2)

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = 1.5708
scale = Vector2(1.73974, 1.73974)
texture = ExtResource("3_xwkpq")

[node name="ColisionBox" type="CollisionShape2D" parent="."]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_11888")

[node name="HitBox" type="Area2D" parent="."]
unique_name_in_owner = true
collision_mask = 53

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource("RectangleShape2D_7yk41")

[node name="ProjectileStartPosition" type="Marker2D" parent="."]
position = Vector2(26, 0)

[node name="BulletTimer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[connection signal="timeout" from="BulletTimer" to="." method="_on_bullet_timer_timeout"]
